* get_uint32_color() now returns the color as host endian value. * Introduced a new get_rgb_color(), that returns an rgb_color from a host endian   uint32. * Those two together fix bug #2094.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25031 a95241bf-73f2-0310-859d-f6bbb57e9c96